@@ -1060,7 +1060,10 @@ static const uint16 _defaultShortcutKeys[SHORTCUT_COUNT] = {
 	SHORTCUT_UNDEFINED,					// SHORTCUT_SHOW_OPTIONS
 	SHORTCUT_UNDEFINED,					// SHORTCUT_MUTE_SOUND
 	ALT | SDL_SCANCODE_RETURN,			// SHORTCUT_WINDOWED_MODE_TOGGLE
+	SHORTCUT_UNDEFINED,					// SHORTCUT_SHOW_MULTIPLAYER
 	SHORTCUT_UNDEFINED,					// SHORTCUT_PAINT_ORIGINAL_TOGGLE
+	SHORTCUT_UNDEFINED,					// SHORTCUT_DEBUG_PAINT_TOGGLE
+	SHORTCUT_UNDEFINED,					// SHORTCUT_SEE_THROUGH_PATHS_TOGGLE
 };
 
 #define SHORTCUT_FILE_VERSION 1
