@@ -80,6 +80,7 @@ enum {
 	SHORTCUT_SHOW_MULTIPLAYER,
 	SHORTCUT_PAINT_ORIGINAL_TOGGLE,
 	SHORTCUT_DEBUG_PAINT_TOGGLE,
+	SHORTCUT_SEE_THROUGH_PATHS_TOGGLE,
 
 	SHORTCUT_COUNT
 };
