@@ -134,6 +134,7 @@ const rct_string_id ShortcutStringIds[] = {
 	STR_SHORTCUT_SHOW_MULTIPLAYER,
 	STR_SHORTCUT_PAINT_ORIGINAL,
 	STR_SHORTCUT_DEBUG_PAINT_TOGGLE,
+	STR_SHORTCUT_SEE_THROUGH_PATHS_TOGGLE,
 };
 
 /**
